Fix: Set colour to ensure focus colour is set on dark mode

--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -1,5 +1,6 @@
 .card {
   background-color: none;
+  color: var(--color-dark);
   padding: 0;
   border: none;
   position: relative;
